--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
 </script>
 
 </head>
-<body class="body_background">
+<body class="body_backgorund">
 
 <div align="center">
 <h1>Paint</h1>
 
-    <canvas id="myCanvas" width="800" height="600"></canvas>
-        <br><br>
-
-    <span>
-        <p>Color: </p>
-    </span>
-        <input id="color_input">
-        <p>Width: </p>
-        <input id="linewidth">
-        <br><br>
-        <button onclick="clearArea()">Clear area</button>
+    <canvas id="myCanvas" width="800" height="400"></canvas>
+        <br><br >
 
 <!--Additional activity -->
+        <span>Radius - </span>  
+        <input type="text" id="radius" value=20>
+
+        <span>Color - </span>  
+        <input type="text" id="color" value="Red">
+        
+        <span>Width Of the line  - </span>  
+        <input type="text" id="width_of_line" value="2">
+        <br/>
+        <button onclick="clearArea();">Clear Area</button>
 
     </div>
 <script src="main.js"></script>
 </body>
+  
 </html>
